Project

General

Profile

Actions

Bug #61193

open

ObjectStore/StoreTest.SimpleCloneTest/2 times out from an abort in the objectstore log

Added by Laura Flores about 1 year ago. Updated 3 months ago.

Status:
Pending Backport
Priority:
High
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

/a/yuriw-2023-04-04_21:18:37-rados-wip-yuri3-testing-2023-04-04-0833-pacific-distro-default-smithi/7231756/teuthology.log
<pre><code class="text">
2023-04-05T07:02:12.502 INFO:teuthology.orchestra.run.smithi122.stdout:[ RUN      ] ObjectStore/StoreTest.SimpleCloneTest/2
2023-04-05T07:02:15.408 INFO:teuthology.orchestra.run.smithi122.stderr:Creating collection meta
2023-04-05T07:02:15.408 INFO:teuthology.orchestra.run.smithi122.stderr:Creating object and set attr #-1:de000000::key:Object 1:head#
2023-04-05T07:02:15.408 INFO:teuthology.orchestra.run.smithi122.stderr:Clone object and rm attr
2023-04-05T07:02:16.946 INFO:teuthology.orchestra.run.smithi122.stderr:Invalid rm coll
2023-04-05T18:49:29.148 DEBUG:teuthology.exit:Got signal 15; running 1 handler...
2023-04-05T18:49:29.228 DEBUG:teuthology.task.console_log:Killing console logger for smithi122
2023-04-05T18:49:29.229 DEBUG:teuthology.exit:Finished running handlers
"teuthology.log" [readonly] 3566L, 528305C                                                    
</code></pre>

/a/yuriw-2023-04-04_21:18:37-rados-wip-yuri3-testing-2023-04-04-0833-pacific-distro-default-smithi/7231756/remote/smithi122/ceph_test_objectstore.log.gz
<pre><code class="text">
2023-04-05T07:02:09.766+0000 7ff55a886540 20 memstore(memstore.test_temp_dir) _save coll meta 0x5652fe821d40
2023-04-05T07:02:09.766+0000 7ff55a886540 10 memstore(memstore.test_temp_dir) _load
2023-04-05T07:02:09.766+0000 7ff55a886540  0 memstore(memstore.test_temp_dir) dump:{
    "collections": [
        {
            "name": "meta",
            "xattrs": [],
            "objects": [
                {
                    "name": "#-1:de000000::key:Object 1:head#",
                    "data_len": 65536,
                    "omap_header_len": 0,
                    "xattrs": [],
                    "omap": []
                },
                {
                    "name": "#-1:de000000::key:Object 2:head#",
                    "data_len": 65536,
                    "omap_header_len": 0,
                    "xattrs": [],
                    "omap": []
                }
            ]
        }
    ]
}

2023-04-05T07:02:09.790+0000 7ff55a886540 -1 *** Caught signal (Aborted) **
 in thread 7ff55a886540 thread_name:ceph_test_objec

 ceph version 16.2.11-396-g5c985a09 (5c985a09c75a9cc73e9774aadc248a51b2319e16) pacific (stable)
 1: /lib/x86_64-linux-gnu/libpthread.so.0(+0x14420) [0x7ff56424a420]
 2: gsignal()
 3: abort()
 4: ceph_test_objectstore(+0x80fd93) [0x5652fc3b3d93]
 5: ceph_test_objectstore(+0xc06fe6) [0x5652fc7aafe6]
 6: clone()
</code></pre>

The same failure happened again in a rerun:
/a/yuriw-2023-04-06_15:37:58-rados-wip-yuri3-testing-2023-04-04-0833-pacific-distro-default-smithi/7234287

I first saw the failure in this test batch:
https://trello.com/c/xbDVq4DL/1730-wip-yuri3-testing-2023-04-04-0833-pacific
https://pulpito.ceph.com/?branch=wip-yuri3-testing-2023-04-04-0833-pacific


Related issues 2 (2 open0 closed)

Copied to bluestore - Backport #64115: quincy: ObjectStore/StoreTest.SimpleCloneTest/2 times out from an abort in the objectstore logIn ProgressActions
Copied to bluestore - Backport #64116: reef: ObjectStore/StoreTest.SimpleCloneTest/2 times out from an abort in the objectstore logIn ProgressActions
Actions #2

Updated by Laura Flores about 1 year ago

  • Backport set to pacific
Actions #3

Updated by Laura Flores 9 months ago

/a/yuriw-2023-08-08_14:45:33-rados-wip-yuri6-testing-2023-08-03-0807-pacific-distro-default-smithi/7363248

Actions #4

Updated by Laura Flores 9 months ago

/a/yuriw-2023-08-21_23:10:07-rados-pacific-release-distro-default-smithi/7375630

Actions #5

Updated by Igor Fedotov 9 months ago

  • Status changed from New to Fix Under Review
  • Backport changed from pacific to reef, quincy, pacific
  • Pull request ID set to 53154
Actions #6

Updated by Laura Flores 7 months ago

/a/lflores-2023-11-01_18:38:59-rados-wip-yuri5-testing-2023-10-24-0737-pacific-distro-default-smithi/7443303

Actions #8

Updated by Igor Fedotov 4 months ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from reef, quincy, pacific to reef, quincy
Actions #9

Updated by Backport Bot 4 months ago

  • Copied to Backport #64115: quincy: ObjectStore/StoreTest.SimpleCloneTest/2 times out from an abort in the objectstore log added
Actions #10

Updated by Backport Bot 4 months ago

  • Copied to Backport #64116: reef: ObjectStore/StoreTest.SimpleCloneTest/2 times out from an abort in the objectstore log added
Actions #11

Updated by Backport Bot 4 months ago

  • Tags set to backport_processed
Actions #12

Updated by Laura Flores 3 months ago

/a/yuriw-2024-02-08_23:15:40-rados-wip-yuri10-testing-2024-02-08-0854-pacific-distro-default-smithi/7552597

Actions

Also available in: Atom PDF