test/store_test: get rid off assert_death.

Looks like death assertions aren't 100% reliable and might cause
deadlock sometimes.
Hence getting rid of them and enabling optional sending exception from
*Store::queue_transaction()

Fixes: https://tracker.ceph.com/issues/61193

Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>
(cherry picked from commit 46f01d832487d3a3183783d41450fd8f49347097)